create store page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li><a href="#comics">Comics</a></li>
                     <li><a href="#figuras">Figuras</a></li>
                     <li><a href="#ofertas">Ofertas</a></li>
+                    <li><a href="/page/Tienda.html">Tienda</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
