--- a/index.html
+++ b/index.html
@@ -145,6 +145,168 @@
             </div>
         </div>
     </section>
+    <!-- Ofertas Section -->
+    <section class="section" id="ofertas">
+        <div class="container">
+            <h2 class="section-title">OFERTAS ESPECIALES</h2>
+
+            <div class="offers-grid">
+                <!-- Comics Offers -->
+                <div class="offer-category">
+                    <h3 class="offer-title">Comics <span class="small-note">¡Hasta 30% dto!</span></h3>
+                    <div class="grid">
+                        <div class="card offer-item">
+                            <div class="discount-tag">-30%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#ff6b35 0%, #ff8c42 100%);">
+                                <div class="card-icon">📖</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Dragon Ball Z Vol. 1</h3>
+                                <p class="card-price">€9.09 <span class="old-price">€12.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-20%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#f72585 0%, #b5179e 100%);">
+                                <div class="card-icon">📚</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Dragon Ball Super Vol. 15</h3>
+                                <p class="card-price">€11.99 <span class="old-price">€14.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-15%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#4361ee 0%, #3a0ca3 100%);">
+                                <div class="card-icon">📗</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Dragon Ball Box Set</h3>
+                                <p class="card-price">€76.49 <span class="old-price">€89.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-10%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#06ffa5 0%, #00d9ff 100%);">
+                                <div class="card-icon">📘</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Dragon Ball Z Vol. 2</h3>
+                                <p class="card-price">€11.69 <span class="old-price">€12.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Figuras Offers -->
+                <div class="offer-category">
+                    <h3 class="offer-title">Figuras <span class="small-note">¡Ofertas por tiempo limitado!</span></h3>
+                    <div class="grid">
+                        <div class="card offer-item">
+                            <div class="discount-tag">-10%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#ffba08 0%, #faa307 100%);">
+                                <div class="card-icon">🥋</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Goku Super Saiyan</h3>
+                                <p class="card-price">€31.49 <span class="old-price">€34.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-15%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#7209b7 0%, #560bad 100%);">
+                                <div class="card-icon">👊</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Vegeta Blue Evolution</h3>
+                                <p class="card-price">€33.99 <span class="old-price">€39.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-28%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#ef476f 0%, #d62828 100%);">
+                                <div class="card-icon">💥</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Set 7 Esferas Dragón</h3>
+                                <p class="card-price">€17.99 <span class="old-price">€24.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-12%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#06ffa5 0%, #00b4d8 100%);">
+                                <div class="card-icon">⚡</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Goku Ultra Instinct</h3>
+                                <p class="card-price">€30.79 <span class="old-price">€34.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Merch & Accesorios Offers -->
+                <div class="offer-category">
+                    <h3 class="offer-title">Merch & Accesorios <span class="small-note">¡Novedades rebajadas!</span></h3>
+                    <div class="grid">
+                        <div class="card offer-item">
+                            <div class="discount-tag">-25%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#06ffa5 0%, #00d9ff 100%);">
+                                <div class="card-icon">🎽</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Camiseta Goku</h3>
+                                <p class="card-price">€14.99 <span class="old-price">€19.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-18%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#f72585 0%, #b5179e 100%);">
+                                <div class="card-icon">🎒</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Mochila Capsule</h3>
+                                <p class="card-price">€32.79 <span class="old-price">€39.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-40%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#ff6b35 0%, #ff8c42 100%);">
+                                <div class="card-icon">🧢</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Gorra Saiyan</h3>
+                                <p class="card-price">€8.99 <span class="old-price">€14.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                        <div class="card offer-item">
+                            <div class="discount-tag">-35%</div>
+                            <div class="card-image" style="background: linear-gradient(135deg,#ffba08 0%, #faa307 100%);">
+                                <div class="card-icon">🔑</div>
+                            </div>
+                            <div class="card-content">
+                                <h3>Llavero Shenron</h3>
+                                <p class="card-price">€3.24 <span class="old-price">€4.99</span></p>
+                                <button class="btn-card">Añadir al Carrito</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <!-- Banner Section -->
     <section class="banner">
