--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#figuras">Figuras</a></li>
                     <li><a href="#ofertas">Ofertas</a></li>
                     <li><a href="/page/Tienda.html">Tienda</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="/page/contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
