--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="#ofertas">Ofertas</a></li>
                     <li><a href="/page/Tienda.html">Tienda</a></li>
                     <li><a href="/page/contacto.html">Contacto</a></li>
+                    <li><a href="/page/galeria.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
